Ensure images in text don't overflow from their container

--- a/css/site.css
+++ b/css/site.css
@@ -71,3 +71,11 @@ body {
   margin-left: 200px;
   padding: 0 40px 80px;
 }
+
+.session p img {
+  margin: 20px 0;
+  /* Same as `.img-responsive` */
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
